Azure/old/Azure/03_Django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: ghcr.io/sw-code/book-rental-py:main
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    app: django
