Azure/old/Azure/04_Ingress_Resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx-cert
spec:
  tls:
    - hosts:
      - fabian.swcode.io
      secretName: letsencrypt-nginx-private-key-cert
  ingressClassName: nginx
  rules:
  - host: fabian.swcode.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django
            port:
              number: 8000
